* April 15, 2008, Kristian Van Der Vliet *

Detect the Intel i945GME chip with the i855 driver.

* April 11, 2008, Kaj de Vos *

Gave priority to the resource packages installed in /usr/ over software installed in
/usr/local/. This means that you can port software according to its standard instructions,
and then later install an official package for it in /usr/ without having to painfully
delete the scattered files under /usr/local/.

* March 24, 2008, Kristian Van Der Vliet *

Updated the GeForceFX driver with PCI IDs for newer cards. Untested. Patch from
Alexandru Mizeranschi <lexu_85@yahoo.com>

* March 9, 2008, Kristian Van Der Vliet *

Some patches from Anthony Morphett

o An improved shutdown tool to do a clean shutdown via the appserver. This is intended
  to replace the current shutdown and reboot tools which don't give apps a chance to
  quit cleanly.
o In the mouse prefs app, the doubleclick speed values it was setting were off by a
  factor of 100, so even the slowest speed was way to fast to be usable. Also the
  doubleclick slider wasn't initially being set to the right value.
o Make lsattribs and dumpattribs work with read-only filesystems. Currently they open
  the file O_RDWR which fails on read-only filesystems; changed to O_RDONLY.

* January 12 2008, Kristian Van Der Vliet *

A bunch of PThreads improvements:

o Implemented thread cancellation. pthread_cancel() & pthread_testcancel() now work.
o Defined SIGCANCEL using the (unused) signal # used for SIGWINCH
o The type for pthread_t has changed from a simple int to a more complex struct pointer.
  A pthread_t variable can now be used to access the associated pthread_attr_t. This is
  used in E.g. pthread_join() where the target thread is checked to ensure it is
  joinable.
o As a result of the above change and an additional change to pthread_attr_t the
  library version has been incremented.
o Change setstackaddr() & setstacksize() to always return ENOSYS